--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/next"]
 	path = themes/next
 	url = git@github.com:theme-next/hexo-theme-next.git
+[submodule "themes/even"]
+	path = themes/even
+	url = git@github.com:ahonn/hexo-theme-even.git
