--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/even"]
 	path = themes/even
 	url = git@github.com:ahonn/hexo-theme-even.git
+[submodule "themes/indigo"]
+	path = themes/indigo
+	url = git@github.com:yscoder/hexo-theme-indigo.git
