update: optimize blog setups

--- a/_config.yml
+++ b/_config.yml
@@ -4,16 +4,16 @@
 
 # Site
 title: GaryLz
-subtitle: Footprints - "keep curiosity as a child"
-description: Digest, Reflection, Sharing
-keywords: Garden,Garage,Lab...
-author: Gary.Leung
+subtitle: "keep curiosity as a child"
+description:
+keywords:
+author: Garylz
 language: zh_Han, en
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://GaryLz.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
