--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-json-content": "^4.1.6",
+    "hexo-generator-searchdb": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-git-backup": "^0.1.3",
     "hexo-renderer-ejs": "^0.3.1",
@@ -25,6 +26,7 @@
     "hexo-renderer-scss": "^1.2.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
+    "hexo-symbols-count-time": "^0.7.1",
     "package.json": "^2.0.1"
   }
 }
