--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^4.18.2",
     "hexo": "^4.2.0",
+    "hexo-asset-image": "^1.0.0",
     "hexo-cli": "^3.1.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
